--- a/OMPWebApp/Components/Pages/FMPages/FMPayroll.razor
+++ b/OMPWebApp/Components/Pages/FMPages/FMPayroll.razor
@@ -81,6 +81,7 @@
         <Columns>
             <RadzenDataGridColumn TItem="PayrollDTO" Property="Name" Title="First Name" />
             <RadzenDataGridColumn TItem="PayrollDTO" Property="Surname" Title="Last Name" />
+            <RadzenDataGridColumn TItem="PayrollDTO" Property="ContractTypeNavigation.Title" Title="Contract Type" />
             <RadzenDataGridColumn TItem="PayrollDTO" Property="RatePerHourBrutto" Title="Hourly Rate" />
             <RadzenDataGridColumn TItem="PayrollDTO" Property="Hours" Title="Hours" />
             <RadzenDataGridColumn TItem="PayrollDTO" Property="Currency.Code" Title="Currency" />
