--- a/OMPWebApp/Components/Pages/TaskDialog.razor
+++ b/OMPWebApp/Components/Pages/TaskDialog.razor
@@ -38,6 +38,11 @@
             </div>
         </div>
 
+        @* <div class="task-section"> *@
+        @*     <h4>Discussion</h4> *@
+        @*     <GroupChatComponent TaskId="@task.Id" GroupId="@task.GroupId" /> *@
+        @* </div> *@
+
         <div class="task-section">
             <h4>Timeline</h4>
             <RadzenStack Gap="1rem" Class="task-info-grid">
