--- a/OMPWebApp/Components/Pages/FMPages/FMPayrollTaxRatePage.razor
+++ b/OMPWebApp/Components/Pages/FMPages/FMPayrollTaxRatePage.razor
@@ -123,7 +123,7 @@
     }
     private async void AddPayrollTax()
     {
-        await DialogService.OpenAsync<AddTaxDialog>("New Payroll Tax",
+        var result =  await DialogService.OpenAsync<AddTaxDialog>("New Payroll Tax",
         new Dictionary<string, object>()
                         {
             {"type", "payroll" },
@@ -133,12 +133,16 @@
                 Width = "700px",
                 Height = "300px"
             });
-        await LoadData();
+        if (result is bool success && success)
+        {
+            await LoadData();
+            StateHasChanged();
+        }
     }
 
     private async void AddInvoiceTax()
     {
-        await DialogService.OpenAsync<AddTaxDialog>("New Invoice Tax",
+        var result = await DialogService.OpenAsync<AddTaxDialog>("New Invoice Tax",
         new Dictionary<string, object>()
                             {
             {"type", "invoice" },
@@ -148,11 +152,17 @@
                 Width = "700px",
                 Height = "300px"
             });
+
+        if (result is bool success && success)
+        {
+            await LoadData();
+            StateHasChanged();
+        }
     }
 
     private async void EditPayrollTax(PayrollTaxRateDTO tax)
     {
-        await DialogService.OpenAsync<AddTaxDialog>("Edit Payroll Tax",
+        var result = await DialogService.OpenAsync<AddTaxDialog>("Edit Payroll Tax",
             new Dictionary<string, object>()
                 {
             { "type", "payroll" },
@@ -160,12 +170,16 @@
                 },
             new DialogOptions() { Width = "700px", Height = "300px" });
 
-        await LoadData();
+        if (result is bool success && success)
+        {
+            await LoadData();
+            StateHasChanged(); 
+        }
     }
 
     private async void EditInvoiceTax(InvoiceTaxRateDTO tax)
     {
-        await DialogService.OpenAsync<AddTaxDialog>("Edit Invoice Tax",
+        var result = await DialogService.OpenAsync<AddTaxDialog>("Edit Invoice Tax",
             new Dictionary<string, object>()
                 {
             { "type", "invoice" },
@@ -173,7 +187,11 @@
                 },
             new DialogOptions() { Width = "700px", Height = "300px" });
 
-        await LoadData();
+        if (result is bool success && success)
+        {
+            await LoadData();
+            StateHasChanged();
+        }
     }
 
     private async void DeletePayrollTax(PayrollTaxRateDTO tax)
